[gd_scene load_steps=16 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://gamescene/UI-GameScene.tres" type="Theme" id=2]
[ext_resource path="res://images/zone1-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://images/GAME OVER.png" type="Texture" id=4]
[ext_resource path="res://images/zone2-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://images/zone3-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://images/LOCKER.png" type="Texture" id=7]
[ext_resource path="res://images/startagain.png" type="Texture" id=8]
[ext_resource path="res://images/zone4-removebg-preview.png" type="Texture" id=9]
[ext_resource path="res://images/zone6.png" type="Texture" id=10]
[ext_resource path="res://images/zone5.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.960784, 0.960784, 0.929412, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.980392, 0.847059, 0.462745 )
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.94902, 0.741176, 1 )
border_width_left = 1
border_width_top = 3
border_width_right = 1
border_width_bottom = 3
border_color = Color( 0.509804, 0.584314, 0.580392, 1 )
shadow_color = Color( 1, 0.992157, 0.823529, 0.796078 )
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.462745, 0.490196, 0.447059, 1 )
shadow_color = Color( 0.831373, 0.466667, 0.466667, 0.917647 )
shadow_offset = Vector2( 1, 0 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -662, -95 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Level1" type="Node2D" parent="."]
position = Vector2( 187, 154 )
scale = Vector2( 0.636454, 0.636454 )

[node name="Sprite6" type="Sprite" parent="Level1"]
position = Vector2( 67, 63 )
scale = Vector2( 0.33434, 0.33434 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Level1"]
margin_left = 145.0
margin_top = 229.0
margin_right = 195.0
margin_bottom = 252.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEVEL1 "

[node name="Sprite" type="Sprite" parent="Level1"]
position = Vector2( 172, 122 )
scale = Vector2( 0.546688, 0.576943 )
texture = ExtResource( 3 )

[node name="Panel3" type="Panel" parent="Level1"]
margin_right = 323.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 2 )

[node name="Level2" type="Node2D" parent="."]
position = Vector2( 195, 39 )
scale = Vector2( 0.639261, 0.639261 )

[node name="Sprite7" type="Sprite" parent="Level2"]
position = Vector2( 417, 242 )
scale = Vector2( 0.33434, 0.33434 )
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="Level2"]
position = Vector2( 524.043, 306.604 )
scale = Vector2( 0.488345, 0.515978 )
texture = ExtResource( 5 )

[node name="Label3" type="Label" parent="Level2"]
margin_left = 481.0
margin_top = 408.0
margin_right = 531.0
margin_bottom = 431.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEVEL2"

[node name="Panel4" type="Panel" parent="Level2"]
margin_left = 349.0
margin_top = 179.0
margin_right = 672.0
margin_bottom = 395.0
custom_styles/panel = SubResource( 2 )

[node name="Level3" type="Node2D" parent="."]
position = Vector2( 221, 42 )
scale = Vector2( 0.626265, 0.626265 )

[node name="Sprite5" type="Sprite" parent="Level3"]
position = Vector2( 853, 298 )
scale = Vector2( 0.7621, 0.796698 )
texture = ExtResource( 6 )

[node name="Sprite8" type="Sprite" parent="Level3"]
position = Vector2( 751, 242 )
scale = Vector2( 0.33434, 0.33434 )
texture = ExtResource( 7 )

[node name="Label4" type="Label" parent="Level3"]
margin_left = 827.0
margin_top = 408.0
margin_right = 877.0
margin_bottom = 431.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEVEL3"

[node name="Panel5" type="Panel" parent="Level3"]
margin_left = 685.0
margin_top = 179.0
margin_right = 1008.0
margin_bottom = 395.0
custom_styles/panel = SubResource( 2 )

[node name="Level4" type="Node2D" parent="."]
position = Vector2( 187, 343 )
scale = Vector2( 0.636454, 0.636454 )

[node name="Sprite6" type="Sprite" parent="Level4"]
position = Vector2( 67, 63 )
scale = Vector2( 0.33434, 0.33434 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Level4"]
margin_left = 145.0
margin_top = 229.0
margin_right = 195.0
margin_bottom = 252.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEVEL4"

[node name="Sprite" type="Sprite" parent="Level4"]
position = Vector2( 172, 122 )
scale = Vector2( 0.852229, 0.899393 )
texture = ExtResource( 9 )

[node name="Panel3" type="Panel" parent="Level4"]
margin_right = 323.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 2 )

[node name="Level5" type="Node2D" parent="."]
position = Vector2( 195, 228 )
scale = Vector2( 0.639261, 0.639261 )

[node name="Sprite4" type="Sprite" parent="Level5"]
position = Vector2( 524.043, 292.525 )
scale = Vector2( 0.0767611, 0.0811046 )
texture = ExtResource( 11 )

[node name="Sprite7" type="Sprite" parent="Level5"]
position = Vector2( 417, 242 )
scale = Vector2( 0.33434, 0.33434 )
texture = ExtResource( 7 )

[node name="Label3" type="Label" parent="Level5"]
margin_left = 481.0
margin_top = 408.0
margin_right = 531.0
margin_bottom = 431.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEVEL5"

[node name="Panel4" type="Panel" parent="Level5"]
margin_left = 349.0
margin_top = 179.0
margin_right = 672.0
margin_bottom = 395.0
custom_styles/panel = SubResource( 2 )

[node name="Level6" type="Node2D" parent="."]
position = Vector2( 221, 231 )
scale = Vector2( 0.626265, 0.626265 )

[node name="Sprite5" type="Sprite" parent="Level6"]
position = Vector2( 853, 298 )
scale = Vector2( 0.0828132, 0.0865728 )
texture = ExtResource( 10 )

[node name="Sprite8" type="Sprite" parent="Level6"]
position = Vector2( 751, 242 )
scale = Vector2( 0.33434, 0.33434 )
texture = ExtResource( 7 )

[node name="Label4" type="Label" parent="Level6"]
margin_left = 827.0
margin_top = 408.0
margin_right = 877.0
margin_bottom = 431.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LEVEL6"

[node name="Panel5" type="Panel" parent="Level6"]
margin_left = 685.0
margin_top = 179.0
margin_right = 1008.0
margin_bottom = 395.0
custom_styles/panel = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 504, 69 )
scale = Vector2( 0.564535, 0.564535 )
texture = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel2" type="Panel" parent="."]
visible = false
margin_left = 372.0
margin_top = 473.0
margin_right = 412.0
margin_bottom = 513.0
rect_scale = Vector2( 7.1934, 1.82665 )
custom_styles/panel = SubResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 172.0
margin_top = 139.0
margin_right = 416.0
margin_bottom = 226.0
rect_scale = Vector2( 0.96083, 2.10294 )
flat = true

[node name="Button2" type="Button" parent="."]
margin_left = 408.0
margin_top = 138.0
margin_right = 652.0
margin_bottom = 225.0
rect_scale = Vector2( 0.96083, 2.10294 )
flat = true

[node name="Button3" type="Button" parent="."]
margin_left = 632.0
margin_top = 139.0
margin_right = 876.0
margin_bottom = 226.0
rect_scale = Vector2( 0.96083, 2.10294 )
flat = true

[node name="Button4" type="Button" parent="."]
margin_left = 168.0
margin_top = 327.0
margin_right = 412.0
margin_bottom = 414.0
rect_scale = Vector2( 0.96083, 2.10294 )
flat = true

[node name="Button5" type="Button" parent="."]
margin_left = 408.0
margin_top = 325.0
margin_right = 652.0
margin_bottom = 412.0
rect_scale = Vector2( 0.96083, 2.10294 )
flat = true

[node name="Button6" type="Button" parent="."]
margin_left = 636.0
margin_top = 324.0
margin_right = 880.0
margin_bottom = 411.0
rect_scale = Vector2( 0.96083, 2.10294 )
flat = true

[node name="L1" type="Node2D" parent="."]
visible = false

[node name="Sprite3" type="Sprite" parent="L1"]
position = Vector2( 291, 172 )
scale = Vector2( 0.229301, 0.206949 )
texture = ExtResource( 8 )

[node name="Zone1" type="Sprite" parent="L1"]
position = Vector2( 296.47, 231.647 )
scale = Vector2( 0.347942, 0.367198 )
texture = ExtResource( 3 )

[node name="Panel" type="Panel" parent="L1"]
margin_left = 184.0
margin_top = 151.0
margin_right = 224.0
margin_bottom = 191.0
rect_scale = Vector2( 5.30307, 3.49909 )
custom_styles/panel = SubResource( 4 )

[node name="L2" type="Node2D" parent="."]
visible = false
position = Vector2( 229, 0 )

[node name="Sprite3" type="Sprite" parent="L2"]
position = Vector2( 291, 172 )
scale = Vector2( 0.229301, 0.206949 )
texture = ExtResource( 8 )

[node name="Zone2" type="Sprite" parent="L2"]
position = Vector2( 301, 235 )
scale = Vector2( 0.31218, 0.329844 )
texture = ExtResource( 5 )

[node name="Panel" type="Panel" parent="L2"]
margin_left = 184.0
margin_top = 151.0
margin_right = 224.0
margin_bottom = 191.0
rect_scale = Vector2( 5.30307, 3.49909 )
custom_styles/panel = SubResource( 4 )

[node name="L3" type="Node2D" parent="."]
visible = false
position = Vector2( 461, 0 )

[node name="Sprite3" type="Sprite" parent="L3"]
position = Vector2( 291, 172 )
scale = Vector2( 0.229301, 0.206949 )
texture = ExtResource( 8 )

[node name="Zone3" type="Sprite" parent="L3"]
position = Vector2( 295, 228.627 )
scale = Vector2( 0.477276, 0.498944 )
texture = ExtResource( 6 )

[node name="Panel" type="Panel" parent="L3"]
margin_left = 184.0
margin_top = 151.0
margin_right = 224.0
margin_bottom = 191.0
rect_scale = Vector2( 5.30307, 3.49909 )
custom_styles/panel = SubResource( 4 )

[node name="L4" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 189 )

[node name="Sprite3" type="Sprite" parent="L4"]
position = Vector2( 291, 172 )
scale = Vector2( 0.229301, 0.206949 )
texture = ExtResource( 8 )

[node name="Zone4" type="Sprite" parent="L4"]
position = Vector2( 296.47, 231.647 )
scale = Vector2( 0.542404, 0.572422 )
texture = ExtResource( 9 )

[node name="Panel" type="Panel" parent="L4"]
margin_left = 184.0
margin_top = 151.0
margin_right = 224.0
margin_bottom = 191.0
rect_scale = Vector2( 5.30307, 3.49909 )
custom_styles/panel = SubResource( 4 )

[node name="L5" type="Node2D" parent="."]
visible = false
position = Vector2( 229, 189 )

[node name="Sprite3" type="Sprite" parent="L5"]
position = Vector2( 291, 172 )
scale = Vector2( 0.229301, 0.206949 )
texture = ExtResource( 8 )

[node name="Zone5" type="Sprite" parent="L5"]
position = Vector2( 301, 226 )
scale = Vector2( 0.0490704, 0.051847 )
texture = ExtResource( 11 )

[node name="Panel" type="Panel" parent="L5"]
margin_left = 184.0
margin_top = 151.0
margin_right = 224.0
margin_bottom = 191.0
rect_scale = Vector2( 5.30307, 3.49909 )
custom_styles/panel = SubResource( 4 )

[node name="L6" type="Node2D" parent="."]
visible = false
position = Vector2( 461, 189 )

[node name="Sprite3" type="Sprite" parent="L6"]
position = Vector2( 291, 172 )
scale = Vector2( 0.229301, 0.206949 )
texture = ExtResource( 8 )

[node name="Zone6" type="Sprite" parent="L6"]
position = Vector2( 294.204, 228.627 )
scale = Vector2( 0.051863, 0.0542175 )
texture = ExtResource( 10 )

[node name="Panel" type="Panel" parent="L6"]
margin_left = 184.0
margin_top = 151.0
margin_right = 224.0
margin_bottom = 191.0
rect_scale = Vector2( 5.30307, 3.49909 )
custom_styles/panel = SubResource( 4 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_Button2_mouse_entered"]
[connection signal="mouse_exited" from="Button2" to="." method="_on_Button2_mouse_exited"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="mouse_entered" from="Button3" to="." method="_on_Button3_mouse_entered"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="mouse_entered" from="Button4" to="." method="_on_Button4_mouse_entered"]
[connection signal="mouse_exited" from="Button4" to="." method="_on_Button4_mouse_exited"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="mouse_entered" from="Button5" to="." method="_on_Button5_mouse_entered"]
[connection signal="mouse_exited" from="Button5" to="." method="_on_Button5_mouse_exited"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="mouse_entered" from="Button6" to="." method="_on_Button6_mouse_entered"]
[connection signal="mouse_exited" from="Button6" to="." method="_on_Button6_mouse_exited"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
